# unifi-led-api

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  app_config.py  config.py  docker-compose.yml  gitignore  grab_token.py  groups.json.example  led_logic.py  led_off.json.example  led_on.json.example  pyproject.toml  requirements.txt  set_env.sh  setup_cli.py  start.py
.github/workflows/: ci.yml  publish.yml
src/unifi_led_api/: app_config.py  cli.py  grab_token.py  led_logic.py  retry.py  setup_cli.py
tests/: test_app_config.py  test_led_logic.py  test_retry.py
website-test/: index.html
